fix(canvas): changed code so that canvas doesn't overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,45 +4,14 @@
   padding: 0;
 }
 
-:root {
-  --bg-color: #121212;
-  --text: #fff;
-  --primary: blue;
-  --secondary: green;
+html {
+  width: 100vw;
+  height: 100vh;
 }
 
 body {
-  font-size: 10px;
-  font-family: sans-serif;
-  width: 100%;
-  height: 100vh;
-  background-color: var(--bg-color);
-  color: var(--text);
-}
-
-h1 {
-  font-size: 3em;
-}
-
-p {
-  font-size: 1.5em;
-}
-
-li, a {
-  font-size: 1.5em;
-}
-
-a {
-  color: var(--text);
-  text-decoration: none;
-}
-
-main {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   width: 100%;
   height: 100%;
-  text-align: center;
+  background-color: red;
+  overflow: hidden;
 }
